# dummare

./: CHANGELOG.md  Cargo.toml  README.md  about.hbs  about.toml  deny.toml  release-plz.toml
.github/: dependabot.yml
.github/workflows/: act_build.yml  act_build_release.yml  release-plz-release.yml  release.yml
src/: main.rs  raw_guard.rs  sanitiser.rs
