[package]
authors = ["Arvid Norlander"]
categories = ["command-line-utilities"]
description = "Sanitize your terminal ouput for use with hard copy terminals"
edition = "2024"
license = "GPL-3.0-only"
name = "dummare"
repository = "https://github.com/VorpalBlade/dummare"
rust-version = "1.92.0"
version = "0.1.0"

[dependencies]
anyhow = { version = "1.0.100" }
clap = { version = "4.5.53", default-features = false, features = [
    "error-context",
    "help",
    "std",
    "suggestions",
    "usage",
    "wrap_help",
] }
clap_derive = "4.5.49"
nix = { version = "0.30.1", features = ["poll", "term"] }
pty-process = "0.5.3"
terminal_size = "0.4.3"
vte = "0.15.0"

[lints.rust]
elided_lifetimes_in_paths = "warn"
keyword_idents = "warn"
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
redundant_lifetimes = "warn"
rust_2018_idioms = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unit_bindings = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[lints.clippy]
assigning_clones = "warn"
cast_lossless = "warn"
cloned_instead_of_copied = "warn"
derive_partial_eq_without_eq = "warn"
doc_markdown = "warn"
equatable_if_let = "warn"
explicit_iter_loop = "warn"
flat_map_option = "warn"
format_push_string = "warn"
ignored_unit_patterns = "warn"
manual_assert = "warn"
manual_let_else = "warn"
manual_string_new = "warn"
needless_pass_by_value = "warn"
or_fun_call = "warn"
ptr_as_ptr = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_else = "warn"
semicolon_if_nothing_returned = "warn"
type_repetition_in_bounds = "warn"
undocumented_unsafe_blocks = "warn"
uninlined_format_args = "warn"
unnecessary_box_returns = "warn"
unnecessary_safety_doc = "warn"
unnested_or_patterns = "warn"
unwrap_used = "warn"
use_self = "warn"
wildcard_imports = "warn"

[profile.dev]
debug = 2
split-debuginfo = "unpacked"

[profile.release]
lto = "thin"
opt-level = 2

[profile.profiling]
debug = 2
inherits = "release"
lto = false
